# starhopper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: prerelease.yml  release.yml
starhopper/: io.py
starhopper/formats/: archive.py  cdb.py  common.py  mesh.py  strings.py
starhopper/formats/btdx/: file.py
starhopper/formats/esm/: constants.py  file.py
starhopper/formats/esm/records/: base.py  data.py  edid.py  fltv.py  glob.py  gmst.py  types.py
starhopper/gui/: app.py  common.py  group_viewer.py  navigation.py  record_viewer.py  search.py  settings.py  viewer.py  viewer_window.py
starhopper/gui/viewers/: archive_viewer.py  binary_viewer.py  esm_viewer.py  group_viewer.py  model_viewer.py  record_viewer.py  search_viewer.py  string_viewer.py  viewer.py
starhopper/gui/widgets/: spinner.py
